# cmake-package-dump

./: .gitmodules  CMakeLists.txt  README.md
cmake/: xdd.cmake
src/: CMakeLists.txt  cmakedumpConfig.cmake.in
src/tool/: CMakeLists.txt  main.cpp  os.cpp  os.h  os_unix.cpp  os_win.cpp  resources.h
src/tool/resources/: CMakeLists.txt  TestTargets.cmake
